--- a/docs/信息安全原理.md
+++ b/docs/信息安全原理.md
@@ -17,3 +17,11 @@
 构建一个 demo：用笔记本电脑实现对手机上网对象的以上功能。
 
 #### 1.2 实验方案与结果概述
+
+（1）基于 windows 或 linux 抓取 l2tp 协议流量
+
+我们基于 windows10 系统和阿里云服务器（CentOS），搭建了能够抓取 l2tp 协议流量的服务端和电脑环境。在服务端，使用 l2tp over IpSec 协议，开放 1701 端口和 4500 端口，在 windows 系统，通过修改注册表和管理策略，禁用 IpSec 功能，使得协议流量均为未加密的 l2tp 协议流量，便于后续实验分析。编写 C++程序，并配置使用 WinPcap4.1.3，抓取协议流量。
+
+同时，通过观察对比实验，验证了第一问的正确性。
+
+![图 1：实验结果-基于 windows 或 linux 抓取 l2tp 协议流量](https://github.com/ChestnutSilver/TJIS-My-Helloworld/blob/main/pics/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8E%9F%E7%90%86/1.png)
