--- a/docs/信息安全原理.md
+++ b/docs/信息安全原理.md
@@ -24,4 +24,4 @@
 
 同时，通过观察对比实验，验证了第一问的正确性。
 
-![图 1：实验结果-基于 windows 或 linux 抓取 l2tp 协议流量](https://github.com/ChestnutSilver/TJIS-My-Helloworld/blob/main/pics/%E4%BF%A1%E6%81%AF%E5%AE%89%E5%85%A8%E5%8E%9F%E7%90%86/1.png)
+![图 1：实验结果-基于 windows 或 linux 抓取 l2tp 协议流量](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9wcm9maWxlLmNzZG5pbWcuY24vOC8xLzUvM19xcV8zMjY4MjMwMQ?x-oss-process=image/format,png)
