--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -4,21 +4,15 @@
 
 前几天在社交媒体上读到了这样的一个片段，家长在提问一个在上小学的孩子，说：
 
-```
-“3+9*8 等于多少？”
-```
+> “3+9*8 等于多少？”
 
-小孩子迟疑了，支支吾吾不敢作答。孩子知道要“先乘除后加减”，但是对后面的“9*8”，却说老师**没有教过**：
+小孩子迟疑了，支支吾吾不敢作答。孩子知道要“先乘除后加减”，但是对后面的“9\*8”，却说老师**没有教过**：
 
-```
-“八九七十二，九八……，我不知道……”
-```
+> “八九七十二，九八……，我不知道……”
 
 家长似乎有些失去耐心了：
 
-```
-“8乘以9，和9乘以8是一样的！八九七十二，9乘以8，也就是72，再加三就是75了。”
-```
+> “8乘以9，和9乘以8是一样的！八九七十二，9乘以8，也就是72，再加三就是75了。”
 
 其实在很多时候，我们会下意识地认为，“整数乘法满足乘法交换律”是一个很简单、**甚至不需要学就能弄懂**的公理。
 
