--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -45,3 +45,105 @@
 同济大学电子与信息工程学院 ChestnutSilver / 王润霖
 
 2023 年 8 月 21 日
+
+## Chapter 2. 密码学数学基础引论
+
+
+
+## Chapter 3. 抽象代数基本概念
+
+### 1. 元素集合与运算
+
+在这一节，我们将接触群、环、域的最基本的概念（也就是**定义**），并会认识一个特殊的群——阿贝尔群。我们会对数学运算中加法和乘法的交换律、结合律与分配律，数学运算的封闭性，以及单位元、逆元有一个比较**系统的审视**。
+
+在学习这一节的过程中，我们将会**定义许多运算**，这些运算通常用运算符（ +、 · ）等表示。
+
+**注意！不要把这些下意识地想象成加法和乘法，而要注意对运算符的具体定义。**
+
+我们还会定义执行运算的**元素集合**，在整数加法中，元素集合是所有整数；但在我们的定义中，元素集合可能是所有奇数、所有偶数、R上的所有n\*n矩阵、R上的所有n\*n可逆矩阵……可能的定义有很多很多，不要直接想象成全体整数。
+
+也许，学完这一节后，你会对数学运算有一个新的理解。这节内容与高等代数部分章节有些相似，如果没有接触过高代也没关系。
+
+### 2. 群
+
+#### 2.1 群的概念
+
+**群**（Group）(G, ∙ )，其中 G 为元素集合， ∙ 是定义在 G 上的二元运算，满足下面的**四个性质**：
+
+| 性质       | 含义                                                         |
+| ---------- | ------------------------------------------------------------ |
+| 封闭性     | 对 $$\forall a,b\in G$$，有 $$a\cdot b\in G$$                |
+| 结合律     | 对 $$\forall a,b,c\in G$$，有 $$(a\cdot b)\cdot c=a\cdot(b\cdot c)$$ |
+| 存在单位元 | $$\exists e\in G$$，使得对于 $$\forall a\in G$$，有 $$e\cdot a=a\cdot e=a$$，称 $$e$$ 为 $$G$$ 的单位元 |
+| 可逆性     | 对 $$\forall a\in G$$，$$\exists b\in G$$ 满足 $$a\cdot b=b\cdot a=e$$，其中 $$b$$ 称为 $$a$$ 的逆元，表示成 $$b=a^{-1}$$ |
+
+注：
+
+1. 单位元通常用e、1或0表示。
+
+2. 证明是一个群或阿贝尔群，可以通过逐一验证每一个性质。
+
+下面，我们来**通过一个具体的元素集合和二元运算实例**，加深一下对群的概念和四个性质的理解。
+
+> **练习1.** 设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
+>
+> **解析：**在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
+>
+> **解答：**
+>
+> A 关于整数的加法运算不是群；B 关于整数的加法运算是群。
+>
+> 证明：
+>
+> （1）对于 $$\forall a,b\in A$$，设 $$a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$$
+>
+> 则：$$a+b=2n+1+2m+1=2(n+m+1)\notin A$$
+>
+> 不满足封闭性，因此 A 关于整数的加法运算不是群。
+>
+> （2）对于 $$\forall a,b,c\in B$$，设 $$a=2p,\ b=2q,\ c=2r\ (p,q,r\in \Bbb Z)$$
+>
+> 则：①$$a+b=2p+2q=2(p+q)\in B$$，满足封闭性；
+>
+> ②$$(a+b)+c=(2p+2q)+2r=2p+2q+2r=2p+(2q+2r)=a+(b+c)$$，满足结合律；
+>
+> ③$$\exists e=0,\ e\in B,\ 0+2p=2p+0=2p$$，0 为 B 的单位元，满足存在单位元；
+>
+> ④$$\forall a\in B,\ a=2p,\ \exists(-2p)\in B$$ 满足 $$2p+(-2p)=(-2p)+2p=0$$，此时 $$-2p$$ 为 $$2p$$ 的逆元，满足可逆性。
+>
+> 满足群的四个性质，因此 B 关于整数的加法运算是群。
+>
+> 证毕。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
