--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -72,7 +72,7 @@
 
 | 性质       | 含义                                                         |
 | ---------- | ------------------------------------------------------------ |
-| 封闭性     | 对 $$\forall a,b\in G$$，有 $$a\cdot b\in G$$                |
+| 封闭性     | 对 $$\forall a,b\in G$$，有 $a\cdot b\in G$                  |
 | 结合律     | 对 $$\forall a,b,c\in G$$，有 $$(a\cdot b)\cdot c=a\cdot(b\cdot c)$$ |
 | 存在单位元 | $$\exists e\in G$$，使得对于 $$\forall a\in G$$，有 $$e\cdot a=a\cdot e=a$$，称 $$e$$ 为 $$G$$ 的单位元 |
 | 可逆性     | 对 $$\forall a\in G$$，$$\exists b\in G$$ 满足 $$a\cdot b=b\cdot a=e$$，其中 $$b$$ 称为 $$a$$ 的逆元，表示成 $$b=a^{-1}$$ |
