--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -4,7 +4,7 @@
 
 前几天在社交媒体上读到了这样的一个片段，家长在提问一个在上小学的孩子，说：
 
-> “3+9*8 等于多少？”
+> “3+9\*8 等于多少？”
 
 小孩子迟疑了，支支吾吾不敢作答。孩子知道要“先乘除后加减”，但是对后面的“9\*8”，却说老师**没有教过**：
 
@@ -12,13 +12,13 @@
 
 家长似乎有些失去耐心了：
 
-> “8乘以9，和9乘以8是一样的！八九七十二，9乘以8，也就是72，再加三就是75了。”
+> “8 乘以 9，和 9 乘以 8 是一样的！八九七十二，9 乘以 8，也就是 72，再加三就是 75 了。”
 
 其实在很多时候，我们会下意识地认为，“整数乘法满足乘法交换律”是一个很简单、**甚至不需要学就能弄懂**的公理。
 
 但在小孩子眼中，并非如此。
 
-孩子会觉得9*8是一个老师还没有教过的新知识，它与乘法口诀表的八九七十二是不同的。
+孩子会觉得 9\*8 是一个老师还没有教过的新知识，它与乘法口诀表的八九七十二是不同的。
 
 小孩子的直觉是对的。
 
@@ -48,8 +48,6 @@
 
 ## Chapter 2. 密码学数学基础引论
 
-
-
 ## Chapter 3. 抽象代数基本概念
 
 ### 1. 元素集合与运算
@@ -60,7 +58,7 @@
 
 **注意！不要把这些下意识地想象成加法和乘法，而要注意对运算符的具体定义。**
 
-我们还会定义执行运算的**元素集合**，在整数加法中，元素集合是所有整数；但在我们的定义中，元素集合可能是所有奇数、所有偶数、R上的所有n\*n矩阵、R上的所有n\*n可逆矩阵……可能的定义有很多很多，不要直接想象成全体整数。
+我们还会定义执行运算的**元素集合**，在整数加法中，元素集合是所有整数；但在我们的定义中，元素集合可能是所有奇数、所有偶数、R 上的所有 n\*n 矩阵、R 上的所有 n\*n 可逆矩阵……可能的定义有很多很多，不要直接想象成全体整数。
 
 也许，学完这一节后，你会对数学运算有一个新的理解。这节内容与高等代数部分章节有些相似，如果没有接触过高代也没关系。
 
@@ -70,22 +68,22 @@
 
 **群**（Group）(G, ∙ )，其中 G 为元素集合， ∙ 是定义在 G 上的二元运算，满足下面的**四个性质**：
 
-| 性质       | 含义                                                         |
-| ---------- | ------------------------------------------------------------ |
-| 封闭性     | 对 $$\forall a,b\in G$$，有 $a\cdot b\in G$                  |
-| 结合律     | 对 $$\forall a,b,c\in G$$，有 $$(a\cdot b)\cdot c=a\cdot(b\cdot c)$$ |
-| 存在单位元 | $$\exists e\in G$$，使得对于 $$\forall a\in G$$，有 $$e\cdot a=a\cdot e=a$$，称 $$e$$ 为 $$G$$ 的单位元 |
-| 可逆性     | 对 $$\forall a\in G$$，$$\exists b\in G$$ 满足 $$a\cdot b=b\cdot a=e$$，其中 $$b$$ 称为 $$a$$ 的逆元，表示成 $$b=a^{-1}$$ |
+| 性质       | 含义                                                                                                          |
+| ---------- | ------------------------------------------------------------------------------------------------------------- |
+| 封闭性     | 对 $\forall a,b\in G$，有 $a\cdot b\in G$                                                                     |
+| 结合律     | 对 $\forall a,b,c\in G$，有 $(a\cdot b)\cdot c=a\cdot(b\cdot c)$                                              |
+| 存在单位元 | $\exists e\in G$，使得对于 $\forall a\in G$，有 $e\cdot a=a\cdot e=a$，称 $e$ 为 $G$ 的单位元                 |
+| 可逆性     | 对 $\forall a\in G$，$\exists b\in G$ 满足 $a\cdot b=b\cdot a=e$，其中 $b$ 称为 $a$ 的逆元，表示成 $b=a^{-1}$ |
 
 注：
 
-1. 单位元通常用e、1或0表示。
+1. 单位元通常用 e、1 或 0 表示。
 
 2. 证明是一个群或阿贝尔群，可以通过逐一验证每一个性质。
 
 下面，我们来**通过一个具体的元素集合和二元运算实例**，加深一下对群的概念和四个性质的理解。
 
-> **练习1.** 设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
+> **练习 1.** 设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
 >
 > **解析：**在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
 >
@@ -95,55 +93,40 @@
 >
 > 证明：
 >
-> （1）对于 $$\forall a,b\in A$$，设 $$a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$$
+> （1）对于 $\forall a,b\in A$，设 $a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$
 >
-> 则：$$a+b=2n+1+2m+1=2(n+m+1)\notin A$$
+> 则：$a+b=2n+1+2m+1=2(n+m+1)\notin A$
 >
 > 不满足封闭性，因此 A 关于整数的加法运算不是群。
 >
-> （2）对于 $$\forall a,b,c\in B$$，设 $$a=2p,\ b=2q,\ c=2r\ (p,q,r\in \Bbb Z)$$
+> （2）对于 $\forall a,b,c\in B$，设 $a=2p,\ b=2q,\ c=2r\ (p,q,r\in \Bbb Z)$
 >
-> 则：①$$a+b=2p+2q=2(p+q)\in B$$，满足封闭性；
+> 则：①$a+b=2p+2q=2(p+q)\in B$，满足封闭性；
 >
-> ②$$(a+b)+c=(2p+2q)+2r=2p+2q+2r=2p+(2q+2r)=a+(b+c)$$，满足结合律；
+> ②$(a+b)+c=(2p+2q)+2r=2p+2q+2r=2p+(2q+2r)=a+(b+c)$，满足结合律；
 >
-> ③$$\exists e=0,\ e\in B,\ 0+2p=2p+0=2p$$，0 为 B 的单位元，满足存在单位元；
+> ③$\exists e=0,\ e\in B,\ 0+2p=2p+0=2p$，0 为 B 的单位元，满足存在单位元；
 >
-> ④$$\forall a\in B,\ a=2p,\ \exists(-2p)\in B$$ 满足 $$2p+(-2p)=(-2p)+2p=0$$，此时 $$-2p$$ 为 $$2p$$ 的逆元，满足可逆性。
+> ④$\forall a\in B,\ a=2p,\ \exists(-2p)\in B$ 满足 $2p+(-2p)=(-2p)+2p=0$，此时 $-2p$ 为 $2p$ 的逆元，满足可逆性。
 >
 > 满足群的四个性质，因此 B 关于整数的加法运算是群。
 >
 > 证毕。
 
+!!! example
 
+    === "Unordered List"
 
+        ``` markdown
+        * Sed sagittis eleifend rutrum
+        * Donec vitae suscipit est
+        * Nulla tempor lobortis orci
+        ```
 
+    === "Ordered List"
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        ``` markdown
+        1. Sed sagittis eleifend rutrum
+        2. Donec vitae suscipit est
+        3. Nulla tempor lobortis orci
+        ```
