--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -130,3 +130,9 @@
         2. Donec vitae suscipit est
         3. Nulla tempor lobortis orci
         ```
+
+!!! note
+
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et euismod
+    nulla. Curabitur feugiat, tortor non consequat finibus, justo purus auctor
+    massa, nec semper lorem quam in massa.
