--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -136,3 +136,27 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et euismod
     nulla. Curabitur feugiat, tortor non consequat finibus, justo purus auctor
     massa, nec semper lorem quam in massa.
+
+````
+    === "C"
+
+        ``` c
+        #include <stdio.h>
+
+        int main(void) {
+        printf("Hello world!\n");
+        return 0;
+        }
+        ```
+
+    === "C++"
+
+        ``` c++
+        #include <iostream>
+
+        int main(void) {
+        std::cout << "Hello world!" << std::endl;
+        return 0;
+        }
+        ```
+````
