--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -160,3 +160,25 @@
         }
         ```
 ````
+
+<div class="result" markdown>
+
+!!! example
+
+    === "Unordered List"
+
+        ``` markdown
+        * Sed sagittis eleifend rutrum
+        * Donec vitae suscipit est
+        * Nulla tempor lobortis orci
+        ```
+
+    === "Ordered List"
+
+        ``` markdown
+        1. Sed sagittis eleifend rutrum
+        2. Donec vitae suscipit est
+        3. Nulla tempor lobortis orci
+        ```
+
+</div>
