--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -113,72 +113,44 @@
 >
 > 证毕。
 
-!!! example
+!!! 练习 1.
 
-    === "Unordered List"
-
-        ``` markdown
-        * Sed sagittis eleifend rutrum
-        * Donec vitae suscipit est
-        * Nulla tempor lobortis orci
-        ```
-
-    === "Ordered List"
+    === "题目"
 
         ``` markdown
-        1. Sed sagittis eleifend rutrum
-        2. Donec vitae suscipit est
-        3. Nulla tempor lobortis orci
+        设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
         ```
 
-!!! note
-
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et euismod
-    nulla. Curabitur feugiat, tortor non consequat finibus, justo purus auctor
-    massa, nec semper lorem quam in massa.
-
-````
-    === "C"
-
-        ``` c
-        #include <stdio.h>
-
-        int main(void) {
-        printf("Hello world!\n");
-        return 0;
-        }
-        ```
-
-    === "C++"
-
-        ``` c++
-        #include <iostream>
-
-        int main(void) {
-        std::cout << "Hello world!" << std::endl;
-        return 0;
-        }
-        ```
-````
-
-<div class="result" markdown>
-
-!!! example
-
-    === "Unordered List"
+    === "解析"
 
         ``` markdown
-        * Sed sagittis eleifend rutrum
-        * Donec vitae suscipit est
-        * Nulla tempor lobortis orci
+        在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
         ```
 
-    === "Ordered List"
+    === "解答"
 
         ``` markdown
-        1. Sed sagittis eleifend rutrum
-        2. Donec vitae suscipit est
-        3. Nulla tempor lobortis orci
-        ```
+        A 关于整数的加法运算不是群；B 关于整数的加法运算是群。
 
-</div>
+        证明：
+
+        （1）对于 $\forall a,b\in A$，设 $a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$
+
+        则：$a+b=2n+1+2m+1=2(n+m+1)\notin A$
+
+        不满足封闭性，因此 A 关于整数的加法运算不是群。
+
+        （2）对于 $\forall a,b,c\in B$，设 $a=2p,\ b=2q,\ c=2r\ (p,q,r\in \Bbb Z)$
+
+        则：①$a+b=2p+2q=2(p+q)\in B$，满足封闭性；
+
+        ②$(a+b)+c=(2p+2q)+2r=2p+2q+2r=2p+(2q+2r)=a+(b+c)$，满足结合律；
+
+        ③$\exists e=0,\ e\in B,\ 0+2p=2p+0=2p$，0 为 B 的单位元，满足存在单位元；
+
+        ④$\forall a\in B,\ a=2p,\ \exists(-2p)\in B$ 满足 $2p+(-2p)=(-2p)+2p=0$，此时 $-2p$ 为 $2p$ 的逆元，满足可逆性。
+
+        满足群的四个性质，因此 B 关于整数的加法运算是群。
+
+        证毕。
+        ```
