--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -80,9 +80,19 @@
 1. 单位元通常用 e、1 或 0 表示。
 2. 证明是一个群或阿贝尔群，可以通过逐一验证每一个性质。
 
+!!! question "如何理解群的四个性质？"
+
+    === "文字描述"
+
+        【待修改】设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
+
+    === "进一步理解"
+
+        【待修改】在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
+
 下面，我们来**通过一个具体的元素集合和二元运算实例**，加深一下对群的概念和四个性质的理解。
 
-!!! Practice-1
+!!! note "练习 1."
 
     === "题目"
 
