--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -84,7 +84,10 @@
 
     === "文字描述"
 
-        【待修改】设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
+        1、封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群G操作（运算）是*，对于G里的任意元素a,b，那么a*b和b*a都必须是G的元素。
+        2、结合律：虽然群元素不一定要求满足交换律，但必须满足**结合律**，即对G中任意元素a,b,c都有 (a*b)*c=a*(b*c)。
+        3、存在单位元：集合G内**存在**一个单位元素e，它和集合中任何一个元素的积都等于该元素本身，即对于G中每个元素a都有 e*a=a*e=a。
+        4、可逆性：对G中**每个元素a**，在G中都有元素a^（-1），使 a^（-1）*a=a*a^(-1)=e。
 
     === "进一步理解"
 
