--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -80,7 +80,7 @@
 1. 单位元通常用 e、1 或 0 表示。
 2. 证明是一个群或阿贝尔群，可以通过逐一验证每一个性质。
 
-!!! question "如何理解群的四个性质？"
+??? question "如何理解群的四个性质？"
 
     === "文字描述"
 
@@ -90,7 +90,7 @@
 
         3、存在单位元：集合G内**存在**一个单位元素e，它和集合中任何一个元素的积都等于该元素本身，即对于G中每个元素a都有 e\*a=a\*e=a。
 
-        4、可逆性：对G中**每个元素a**，在G中都有元素 $a^{-1}$，使 $a^{-1}\*a=a\*a^{-1}=e$。
+        4、可逆性：对G中**每个元素a**，在G中都有元素 $a^{-1}$，使 $a^{-1}*a=a*a^{-1}=e$。
 
     === "进一步理解"
 
@@ -98,7 +98,7 @@
 
 下面，我们来**通过一个具体的元素集合和二元运算实例**，加深一下对群的概念和四个性质的理解。
 
-!!! note "练习 1."
+???+ note "练习 1."
 
     === "题目"
 
