--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -22,7 +22,7 @@
 
 小孩子的直觉是对的。
 
-当我们在线性代数中，学习了矩阵乘法时，我们又一次感受到**乘法交换律**应用的**局限性**——原来并不是世间万物都满足“交换律“。那么在数学中，什么样的乘法可以使用交换律，或者再想一想，结合律和分配律的应用又是怎样的呢？
+当我们在线性代数中，学习了矩阵乘法时，我们又一次感受到**乘法交换律**应用的**局限性**——原来并不是世间万物都满足“交换律”。那么在数学中，什么样的乘法可以使用交换律，或者再想一想，结合律和分配律的应用又是怎样的呢？
 
 没错，这一次，我们将从整数理论出发，了解数论中**“群”“环”“域”**的概念，它也是许多**密码算法原理**所需要的**数学基础**。
 
@@ -84,17 +84,19 @@
 
     === "文字描述"
 
-        1、封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群G操作（运算）是*，对于G里的任意元素a,b，那么a\*b和b\*a都必须是G的元素。
+        1. 封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群G操作（运算）是*，对于G里的任意元素a,b，那么a\*b和b\*a都必须是G的元素。
 
-        2、结合律：虽然群元素不一定要求满足交换律，但必须满足**结合律**，即对G中任意元素a,b,c都有 (a\*b)\*c=a\*(b\*c)。
+        2. 结合律：虽然群元素不一定要求满足交换律，但必须满足**结合律**，即对G中任意元素a,b,c都有 (a\*b)\*c=a\*(b\*c)。
 
-        3、存在单位元：集合G内**存在**一个单位元素e，它和集合中任何一个元素的积都等于该元素本身，即对于G中每个元素a都有 e\*a=a\*e=a。
+        3. 存在单位元：集合G内**存在**一个单位元素e，它和集合中任何一个元素的积都等于该元素本身，即对于G中每个元素a都有 e\*a=a\*e=a。
 
-        4、可逆性：对G中**每个元素a**，在G中都有元素 $a^{-1}$，使 $a^{-1}*a=a*a^{-1}=e$。
+        4. 可逆性：对G中**每个元素a**，在G中都有元素 $a^{-1}$，使 $a^{-1}*a=a*a^{-1}=e$。
 
     === "进一步理解"
 
-        【待修改】在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
+        1. 群的性质：群有很多性质，例如“群满足消去律”“单位元 e 是唯一幂等元”“群同态保持单位元/逆元”等，这些性质后面会详细介绍。
+
+        2. 群的判定：目前，我们使用了**“逐一验证每一个性质”**的方法判定一个代数系统是否为群；与此同时，还有其他更为简便的方法，例如使用同态、逆元、线性方程、消去律等进行群的判定，这些方法仍然在后面介绍。
 
 下面，我们来**通过一个具体的元素集合和二元运算实例**，加深一下对群的概念和四个性质的理解。
 
@@ -107,6 +109,14 @@
     === "解析"
 
         在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
+
+        技巧：如何规范地验证群的性质呢？例如：我们都知道，奇数与奇数的和是偶数，它说明了“奇数加法不满足封闭性”，但是，**如何将这句话用规范的数学语言描述呢？**
+
+        在高中时，我们经常使用 $2n+1\ (n\in \Bbb Z)$ 的方法来表示一个奇数，在验证群的性质时，我们也常用这种方法进行数学描述。我们假设题目中的集合 A 中有两个元素 a, b（它们是集合中任意的两个元素），这样，我们就可以用 $a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$，来表示 a 和 b 了；进一步地，$a+b=2n+1+2m+1=2(n+m+1)\notin A$，它规范地使用了数学语言，描述了“奇数加法不满足封闭性”的证明过程。
+
+        其他性质的验证也与此同理。
+
+        这种数学语言在验证群的性质中是**常见**的。
 
     === "解答"
 
