--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -77,24 +77,25 @@
 
 注：
 
-1. 单位元通常用 e、1 或 0 表示。
+1. 单位元通常用 $e$、1 或 0 表示。
 2. 证明是一个群或阿贝尔群，可以通过逐一验证每一个性质。
+3. 简写：为了简约起见，在运算符 · 明确的情况下，群 (G, · ) 经常用 G 来代替。
 
 ??? question "如何理解群的四个性质？"
 
     === "文字描述"
 
-        1. 封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群G操作（运算）是*，对于G里的任意元素a,b，那么a\*b和b\*a都必须是G的元素。
+        1. 封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群 G 操作（运算）是*，对于 G 里的任意元素 $a,b$，那么 $a*b$ 和 $b*a$ 都必须是 G 的元素。
 
-        2. 结合律：虽然群元素不一定要求满足交换律，但必须满足**结合律**，即对G中任意元素a,b,c都有 (a\*b)\*c=a\*(b\*c)。
+        2. 结合律：虽然群元素不一定要求满足交换律，但必须满足**结合律**，即对 G 中任意元素 $a,b,c$ 都有 $(a*b)*c=a*(b*c)$。
 
-        3. 存在单位元：集合G内**存在**一个单位元素e，它和集合中任何一个元素的积都等于该元素本身，即对于G中每个元素a都有 e\*a=a\*e=a。
+        3. 存在单位元：集合 G 内**存在**一个单位元素 $e$，它和集合中任何一个元素的积都等于该元素本身，即对于 G 中每个元素 $a$ 都有 $e*a=a*e=a$。
 
-        4. 可逆性：对G中**每个元素a**，在G中都有元素 $a^{-1}$，使 $a^{-1}*a=a*a^{-1}=e$。
+        4. 可逆性：对 G 中**每个元素 $a$**，在 G 中都有元素 $a^{-1}$，使 $a^{-1}*a=a*a^{-1}=e$。
 
     === "进一步理解"
 
-        1. 群的性质：群有很多性质，例如“群满足消去律”“单位元 e 是唯一幂等元”“群同态保持单位元/逆元”等，这些性质后面会详细介绍。
+        1. 群的性质：群有很多性质，例如“群满足消去律”“单位元 $e$ 是唯一幂等元”“群同态保持单位元/逆元”等，这些性质后面会详细介绍。
 
         2. 群的判定：目前，我们使用了**“逐一验证每一个性质”**的方法判定一个代数系统是否为群；与此同时，还有其他更为简便的方法，例如使用同态、逆元、线性方程、消去律等进行群的判定，这些方法仍然在后面介绍。
 
@@ -110,9 +111,9 @@
 
         在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
 
-        技巧：如何规范地验证群的性质呢？例如：我们都知道，奇数与奇数的和是偶数，它说明了“奇数加法不满足封闭性”，但是，**如何将这句话用规范的数学语言描述呢？**
+        **技巧：**如何规范地验证群的性质呢？例如：我们都知道，奇数与奇数的和是偶数，它说明了“奇数加法不满足封闭性”，但是，**如何将这句话用规范的数学语言描述呢？**
 
-        在高中时，我们经常使用 $2n+1\ (n\in \Bbb Z)$ 的方法来表示一个奇数，在验证群的性质时，我们也常用这种方法进行数学描述。我们假设题目中的集合 A 中有两个元素 a, b（它们是集合中任意的两个元素），这样，我们就可以用 $a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$，来表示 a 和 b 了；进一步地，$a+b=2n+1+2m+1=2(n+m+1)\notin A$，它规范地使用了数学语言，描述了“奇数加法不满足封闭性”的证明过程。
+        在高中时，我们经常使用 $2n+1\ (n\in \Bbb Z)$ 的方法来表示一个奇数，在验证群的性质时，我们也常用这种方法进行数学描述。我们假设题目中的集合 A 中有两个元素 $a,b$（它们是集合中任意的两个元素），这样，我们就可以用 $a=2n+1,\ b=2m+1\ (n,m\in \Bbb Z)$，来表示 $a$ 和 $b$ 了；进一步地，$a+b=2n+1+2m+1=2(n+m+1)\notin A$，它规范地使用了数学语言，描述了“奇数加法不满足封闭性”的证明过程。
 
         其他性质的验证也与此同理。
 
