--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -78,7 +78,7 @@
 注：
 
 1. 单位元通常用 $e$、1 或 0 表示。
-2. 证明是一个群或阿贝尔群，可以通过逐一验证每一个性质。
+2. 证明一个代数系统是群，可以通过逐一验证每一个性质。
 3. 简写：为了简约起见，在运算符 · 明确的情况下，群 (G, · ) 经常用 G 来代替。
 
 ??? question "如何理解群的四个性质？"
@@ -144,3 +144,29 @@
         满足群的四个性质，因此 B 关于整数的加法运算是群。
 
         证毕。
+
+#### 2.2 阿贝尔群的概念
+
+若**群 G**满足交换性则称为**阿贝尔群(Abelian 群)**，或者**交换群**。
+
+首先，这个代数系统需要是一个群（需要满足群的四个性质），此外，如果它还满足**交换律**，那么它称为阿贝尔群。
+
+| 性质   | 含义                                          |
+| ------ | --------------------------------------------- |
+| 交换律 | 对 $\forall a,b\in G$，有 $a\cdot b=b\cdot a$ |
+
+证明一个代数系统是阿贝尔群，也可以通过逐一验证每一个性质。
+
+#### 2.3 群、阿贝尔群的例子
+
+1. $(\Bbb Z, + )$：是阿贝尔群。$\Bbb Z$ 表示整数集合 $\Bbb Z={…,-2,-1,0,1,2,…}$，$+$ 表示定义在其上的加法运算。
+
+??? question "上述群、阿贝尔群各例的证明过程？"
+
+    === "$(\Bbb Z, + )$"
+
+        1. 封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群 G 操作（运算）是*，对于 G 里的任意元素 $a,b$，那么 $a*b$ 和 $b*a$ 都必须是 G 的元素。
+
+    === "进一步理解"
+
+        2. 群的性质：群有很多性质，例如“群满足消去律”“单位元 $e$ 是唯一幂等元”“群同态保持单位元/逆元”等，这些性质后面会详细介绍。
