--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -159,7 +159,11 @@
 
 #### 2.3 群、阿贝尔群的例子
 
-1. $(\Bbb Z, + )$：是阿贝尔群。$\Bbb Z$ 表示整数集合 $\Bbb Z={…,-2,-1,0,1,2,…}$，$+$ 表示定义在其上的加法运算。
+1. $(\Bbb Z, + )$：是阿贝尔群。$\Bbb Z$ 表示整数集合 $\Bbb Z=\{…,-2,-1,0,1,2,…\}$，$+$ 表示定义在其上的加法运算。
+2. $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合（例：$\Bbb Z_{4}=\{0,1,2,3\}$），$+$ 表示 **$mod n$ 加法运算**，即：$a+b$ 表示 $(a+b) mod n$，注意这里是在 $\Bbb Z$ 上的 $+$ 运算。
+3. $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} | x 与 n 互素\}$（例：$n=3,\Bbb Z^{*}_{3}=\{1,2\}$；$n=4,\Bbb Z^{*}_{4{4}=\{1,3\}$），$·$ 表示 $mod n$ 乘法运算，即：$a·b=(ab) mod n$。
+4. $Mat_{n}(\Bbb R)$ 关于矩阵加法运算：是阿贝尔群。$Mat_{n}(R)$ 表示 $\Bbb R$ 上的所有 $n*n$ 矩阵的集合；单位元是全 0 矩阵 $0_{n*n}$。
+5. $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n*n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n*n}$；它是一个一般线性群。
 
 ??? question "上述群、阿贝尔群各例的证明过程？"
 
