--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -107,7 +107,7 @@
 
         设 A 是所有奇数构成的集合，B 是所有偶数构成的集合，请问 A、B 关于整数的加法运算是否是群？请证明你的结论。
 
-    === "解析"
+    === "思路"
 
         在这道题目里面，我们要做两件事。第一，判断**所有奇数构成的集合**关于**整数的加法运算**是否是群；第二，判断**所有偶数构成的集合**关于**整数的加法运算**是否是群。你瞧，题目已经定义好了**元素集合**和**二元运算**；下面，我们只需要**逐一验证群的四个性质**，就可以判断它们分别是否是群了。
 
@@ -160,17 +160,36 @@
 #### 2.3 群、阿贝尔群的例子
 
 1. $(\Bbb Z, + )$：是阿贝尔群。$\Bbb Z$ 表示整数集合 $\Bbb Z=\{…,-2,-1,0,1,2,…\}$，$+$ 表示定义在其上的加法运算。
-2. $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合（例：$\Bbb Z_{4}=\{0,1,2,3\}$），$+$ 表示 **$mod n$ 加法运算**，即：$a+b$ 表示 $(a+b) mod n$，注意这里是在 $\Bbb Z$ 上的 $+$ 运算。
-3. $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} | x 与 n 互素\}$（例：$n=3,\Bbb Z^{*}_{3}=\{1,2\}$；$n=4,\Bbb Z^{*}_{4{4}=\{1,3\}$），$·$ 表示 $mod n$ 乘法运算，即：$a·b=(ab) mod n$。
+2. $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合（例：$\Bbb Z_{4}=\{0,1,2,3\}$），$+$ 表示 **$mod\ n$ 加法运算**，即：$a+b$ 表示 $(a+b) mod\ n$，注意这里是在 $\Bbb Z$ 上的 $+$ 运算。
+3. $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} | x 与 n 互素\}$（例：$n=3,\Bbb Z^{*}_{3}=\{1,2\}$；$n=4,\Bbb Z^{*}_{4}=\{1,3\}$），$·$ 表示 $mod\ n$ 乘法运算，即：$a·b=(ab) mod\ n$。
 4. $Mat_{n}(\Bbb R)$ 关于矩阵加法运算：是阿贝尔群。$Mat_{n}(R)$ 表示 $\Bbb R$ 上的所有 $n*n$ 矩阵的集合；单位元是全 0 矩阵 $0_{n*n}$。
 5. $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n*n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n*n}$；它是一个一般线性群。
+6. $S_{n}$ 关于映射合成运算：是群。设 $X$ 是**大小为 $n$** 的有限集合，记 $S_{n}=\{集合 X 上的所有置换\}$。其中：$S_{1}$，$S_{2}$ 是阿贝尔群，$S_{3}$ 不是阿贝尔群，当 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
 
-??? question "上述群、阿贝尔群各例的证明过程？"
+??? question "如何理解映射合成运算？"
 
     === "$(\Bbb Z, + )$"
 
-        1. 封闭性：群内**任意两个元素**或两个以上的元素（相同的或不同的）的结合（积）都是**该集合的**一个元素。即：假设对于群 G 操作（运算）是*，对于 G 里的任意元素 $a,b$，那么 $a*b$ 和 $b*a$ 都必须是 G 的元素。
+        1. 封闭性：
 
     === "进一步理解"
 
-        2. 群的性质：群有很多性质，例如“群满足消去律”“单位元 $e$ 是唯一幂等元”“群同态保持单位元/逆元”等，这些性质后面会详细介绍。
+        2. 群的性质：
+
+??? question "上述群、阿贝尔群各例的证明过程（简略）？"
+
+    === "$(\Bbb Z, + )$"
+
+        1. 封闭性：对 $\forall a,b\in \Bbb Z$，有 $a+b\in \Bbb Z$；
+        2. 结合律：对 $\forall a,b,c\in \Bbb Z$，有 $(a+b)+c=a+(b+c)$；
+        3. 0是单位元：对 $\forall a\in \Bbb Z$，有 $0+a=a+0=a$；
+        4. 可逆性：对 $\forall a\in \Bbb Z$，有 $(-a)+a=a+(-a)=0$，因此 $-a$ 是 $a$ 的逆元；
+        5. 交换律：对 $\forall a,b\in \Bbb Z$，有 $a+b=b+a$。
+
+    === "$(\Bbb Z_{n}, + )$"
+
+        介绍同余性质时再证明。
+
+    === "$(\Bbb Z^{*}_{n}, · )$"
+
+        介绍同余性质时再证明。
