--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -162,19 +162,27 @@
 1. $(\Bbb Z, + )$：是阿贝尔群。$\Bbb Z$ 表示整数集合 $\Bbb Z=\{…,-2,-1,0,1,2,…\}$，$+$ 表示定义在其上的加法运算。
 2. $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合（例：$\Bbb Z_{4}=\{0,1,2,3\}$），$+$ 表示 **$mod\ n$ 加法运算**，即：$a+b$ 表示 $(a+b) mod\ n$，注意这里是在 $\Bbb Z$ 上的 $+$ 运算。
 3. $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} | x 与 n 互素\}$（例：$n=3,\Bbb Z^{*}_{3}=\{1,2\}$；$n=4,\Bbb Z^{*}_{4}=\{1,3\}$），$·$ 表示 $mod\ n$ 乘法运算，即：$a·b=(ab) mod\ n$。
-4. $Mat_{n}(\Bbb R)$ 关于矩阵加法运算：是阿贝尔群。$Mat_{n}(R)$ 表示 $\Bbb R$ 上的所有 $n*n$ 矩阵的集合；单位元是全 0 矩阵 $0_{n*n}$。
+4. $Mat_{n}(\Bbb R)$ 关于矩阵加法运算：是阿贝尔群。$Mat_{n}(\Bbb R)$ 表示 $\Bbb R$ 上的所有 $n*n$ 矩阵的集合；单位元是全 0 矩阵 $0_{n*n}$。
 5. $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n*n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n*n}$；它是一个一般线性群。
 6. $S_{n}$ 关于映射合成运算：是群。设 $X$ 是**大小为 $n$** 的有限集合，记 $S_{n}=\{集合 X 上的所有置换\}$。其中：$S_{1}$，$S_{2}$ 是阿贝尔群，$S_{3}$ 不是阿贝尔群，当 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
 
 ??? question "如何理解映射合成运算？"
 
-    === "$(\Bbb Z, + )$"
+    === "$定义$"
 
-        1. 封闭性：
+        **映射合成运算：**设 $f:A\rightarrow B,\ g:B\rightarrow C$ 为两个映射，称 $(g·f)(a):=g(f(a)),\forall a\in A$ 为映射 $g$ 与 $f$ 的**乘积**或**合成**。
 
-    === "进一步理解"
+        映射合成运算满足结合律，但 $n\geq 3$ 时不满足交换律。
 
-        2. 群的性质：
+        $h·(g·f)=(h·g)·f$.
+
+    === "举例"
+
+        $X$ 是**大小为 $n$** 的有限集合，最简单的例子：$X=\{1,2,…,n\}；
+
+        $S_{n}=x上的所有置换$，我们以 $n=3$ 为例：
+
+        $S_{3}=\left\{\left(1,2,3\\1,2,3\right),\left(1,2,3\\2,1,3\right)\right\}$
 
 ??? question "上述群、阿贝尔群各例的证明过程（简略）？"
 
