--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -178,11 +178,11 @@
 
     === "举例"
 
-        $X$ 是**大小为 $n$** 的有限集合，最简单的例子：$X=\{1,2,…,n\}；
+        $X$ 是大小为 $n$ 的有限集合，最简单的例子：$X=\{1,2,…,n\}；
 
-        $S_{n}=x上的所有置换$，我们以 $n=3$ 为例：
+        $S_{n}=\{x上的所有置换\}$，我们以 $n=3$ 为例：
 
-        $S_{3}=\left\{\left(1,2,3\\1,2,3\right),\left(1,2,3\\2,1,3\right)\right\}$
+        $S_{3}=\left\{\left(1,2,3 \\ 1,2,3\right),\left(1,2,3 \\ 2,1,3\right)\right\}$
 
 ??? question "上述群、阿贝尔群各例的证明过程（简略）？"
 
