--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -182,7 +182,11 @@
 
         $S_{n}=\{x上的所有置换\}$，我们以 $n=3$ 为例：
 
-        $S_{3}=\left\{\left(1,2,3 \\ 1,2,3\right),\left(1,2,3 \\ 2,1,3\right)\right\}$
+        $$
+        S_{3}=\left\{\left(1,2,3 \\
+        1,2,3\right),\left(1,2,3 \\
+        2,1,3\right)\right\}
+        $$
 
 ??? question "上述群、阿贝尔群各例的证明过程（简略）？"
 
