--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -178,11 +178,30 @@
 
     === "举例"
 
-        $X$ 是大小为 $n$ 的有限集合，最简单的例子：$X=\{1,2,…,n\}；
+        $X$ 是大小为 $n$ 的有限集合，最简单的例子：$X=\{1,2,…,n\}.
+
+        （1）置换的例子：
+
+        设 $X=\{1,2,3\}，此时 $S_{3}$ 中的一个元素 $\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\in S_{3}$，记这个元素为 $e$，它表示的置换是：$e(1)=2,\quad e(2)=1,\quad e(3)=3$.
+
+        （2）$S_{n}的例子：
 
         $S_{n}=\{x上的所有置换\}$，我们以 $n=3$ 为例：
 
-        $S_{3}=\left\{\left(1,2,3 \\ 1,2,3 \\ \right),\left(1,2,3 \\ 2,1,3 \\ \right)\right\}$
+        $S_{3}=\left\{
+            \begin{pmatrix} 1,2,3 \\ 1,2,3 \end{pmatrix},
+            \begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix},
+            \begin{pmatrix} 1,2,3 \\ 1,3,2 \end{pmatrix},
+            \begin{pmatrix} 1,2,3 \\ 3,2,1 \end{pmatrix},
+            \begin{pmatrix} 1,2,3 \\ 2,3,1 \end{pmatrix},
+            \begin{pmatrix} 1,2,3 \\ 3,1,2 \end{pmatrix}
+            \right\}$
+
+        （3）映射合成运算的例子：
+
+        注意映射合成在计算时**从右向左**计算，$(g·f)(a):=g(f(a))$，例如：
+
+        $\begin{pmatrix} \color{red}{1}\color{black},\color{green}{2}\color{black},\color{blue}{3} \\ \color{red}{2}\color{black},\color{green}{1}\color{black},\color{blue}{3} \end{pmatrix}\begin{pmatrix} \color{red}{1}\color{black},\color{blue}{2}\color{black},\color{green}{3} \\ \color{red}{1}\color{black},\color{blue}{3}\color{black},\color{green}{2} \end{pmatrix}=\begin{pmatrix} \color{red}{1}\color{black},\color{blue}{2}\color{black},\color{green}{3} \\ \color{red}{2}\color{black},\color{blue}{3}\color{black},\color{green}{1} \end{pmatrix}$
 
 ??? question "上述群、阿贝尔群各例的证明过程（简略）？"
 
