--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -182,9 +182,9 @@
 
         （1）置换的例子：
 
-        设 $X=\{1,2,3\}，此时 $S_{3}$ 中的一个元素 $\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\in S_{3}$，记这个元素为 $e$，它表示的置换是：$e(1)=2,\quad e(2)=1,\quad e(3)=3$.
+        设 $X=\{1,2,3\}$，此时 $S_{3}$ 中的一个元素 $\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\in S_{3}$，记这个元素为 $e$，它表示的置换是：$e(1)=2,\quad e(2)=1,\quad e(3)=3$.
 
-        （2）$S_{n}的例子：
+        （2）$S_{n}$ 的例子：
 
         $S_{n}=\{x上的所有置换\}$，我们以 $n=3$ 为例：
 
