--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -178,7 +178,7 @@
 
     === "举例"
 
-        $X$ 是大小为 $n$ 的有限集合，最简单的例子：$X=\{1,2,…,n\}.
+        $X$ 是大小为 $n$ 的有限集合，最简单的例子：$X=\{1,2,…,n\}$.
 
         （1）置换的例子：
 
@@ -220,3 +220,23 @@
     === "$(\Bbb Z^{*}_{n}, · )$"
 
         介绍同余性质时再证明。
+
+??? question "如何证明一个代数系统不是阿贝尔群？（以 $S_{3}$ 为例）"
+
+    我们一般通过对某个性质**举一个反例**的方法，证明一个代数系统不是阿贝尔群。
+
+    以 $S_{3}$ 为例，证明如下：
+
+    设 $X=\{x_{1},x_{2},x_{3}\}$，令 $e,e'\in S_{3}$ 满足：
+
+    $e(x_{1})=x_{1},\quad e(x_{2})=x_{3},\quad e(x_{3})=x_{2}$，
+
+    $e'(x_{1})=x_{2},\quad e'(x_{2})=x_{3},\quad e'(x_{3})=x_{1}$，
+
+    那么：$ee'(x_{1})=e(x_{2})=x_{3},\quad e'e(x_{1})=e'(x_{1})=x_{2}$.
+
+    因此：$ee'\not=e'e$.
+
+    所以，$S_{3}$ 不是阿贝尔群。
+
+    证毕。
