--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -168,7 +168,7 @@
 
 ??? question "如何理解映射合成运算？"
 
-    === "$定义$"
+    === "定义"
 
         **映射合成运算：**设 $f:A\rightarrow B,\ g:B\rightarrow C$ 为两个映射，称 $(g·f)(a):=g(f(a)),\forall a\in A$ 为映射 $g$ 与 $f$ 的**乘积**或**合成**。
 
@@ -240,3 +240,73 @@
     所以，$S_{3}$ 不是阿贝尔群。
 
     证毕。
+
+???+ note "练习 2."
+
+    === "题目"
+
+        证明 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
+
+    === "思路"
+
+        刚才我们已经提到，一般通过对某个性质**举一个反例**的方法，证明一个代数系统不是阿贝尔群，这个反例可以是很具体的。
+
+        我们已经证明过 $S_{3}$ 不是阿贝尔群了，当 $n>3$ 时，$S_{n}$ 与 $S_{3}$ 的区别，无非就是又**多了几列映射**，我们只需要让多出的这几列映射为对自身的映射，不去关注它（方便证明过程中的计算），从而只关注前 3 列的映射关系。
+
+        此时，再证明它不满足交换律，就和证明 $S_{3}$ 不满足交换律一样简单了。
+
+    === "解答"
+
+        证明：
+
+        先证 $n=3$ 时，$S_{n}$ 不是阿贝尔群。
+
+        $\begin{pmatrix} 1,2,3 \\ 1,3,2 \end{pmatrix},\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\in S_{3}$
+
+        $\begin{pmatrix} 1,2,3 \\ 1,3,2 \end{pmatrix}\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}=\begin{pmatrix} 1,2,3 \\ 3,1,2 \end{pmatrix}$
+
+        $\begin{pmatrix} 1,2,3 \\ 2,1,3 \end{pmatrix}\begin{pmatrix} 1,2,3 \\ 1,3,2 \end{pmatrix}=\begin{pmatrix} 1,2,3 \\ 2,3,1 \end{pmatrix}$
+
+        且：$\begin{pmatrix} 1,2,3 \\ 3,1,2 \end{pmatrix}\not=\begin{pmatrix} 1,2,3 \\ 2,3,1 \end{pmatrix}$，不满足交换律。
+
+        因此 $S_{3}$ 不是阿贝尔群。
+
+        当 $n>3$ 时，令满足 $i>3$ 的所有第 $i$ 列，均为对自身的映射。
+
+        即：$\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 1,3,2,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix},\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 2,1,3,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix}\in S_{n}$
+
+        $\begin{pmatrix} 1,2,3,\ldots,n \\ 1,3,2,\ldots,n \end{pmatrix}\begin{pmatrix} 1,2,3,\ldots,n \\ 2,1,3,\ldots,n \end{pmatrix}=\begin{pmatrix} 1,2,3,\ldots,n \\ 3,1,2,\ldots,n \end{pmatrix}$
+
+        $\begin{pmatrix} 1,2,3,\ldots,n \\ 2,1,3,\ldots,n \end{pmatrix}\begin{pmatrix} 1,2,3,\ldots,n \\ 1,3,2,\ldots,n \end{pmatrix}=\begin{pmatrix} 1,2,3,\ldots,n \\ 2,3,1,\ldots,n \end{pmatrix}$
+
+        且：$\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 3,1,2,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix}\not=\begin{pmatrix} 1,2,3,\ldots\ldots,n \\ 2,3,1,\underbrace{\ldots\ldots,n}_{对自身映射} \end{pmatrix}$ 不满足交换律。
+
+        因此 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
+
+        证毕。
+
+???+ note "练习 3."
+
+    === "题目"
+
+        假设 $\mathscr A$ 是所有形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 2*2 矩阵构成的集合，其中 $a\not=0$.对于实数上的矩阵乘法运算，(a)证明 $\mathscr A$ 是群。(b)$\mathscr A$ 是否是阿贝尔群？请证明你的结论。
+
+    === "思路"
+
+        看到这个形式，可以想到我们前面学到的：
+
+        $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n*n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n*n}$；它是一个一般线性群。
+
+        它要求集合中的元素是 $n*n$ 可逆矩阵，而这道题目中的元素是形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 2*2 矩阵。
+
+        回想一下线性代数的知识：我们可以用“行列式不等于零的矩阵可逆”的方法，计算行列式：$ \begin{vmatrix} a & b \\ 0 & 1 \\ \end{vmatrix}=a-0=a$，又因为题目中说 $a\not=0$，所以它是一个 2*2 可逆矩阵的集合，根据前面学的结论，它是群，但不是阿贝尔群。
+
+        得到了结论，我们如何证明呢？
+
+        事实上，在证明 $GL(n,\Bbb R)$ 的封闭、可逆等性质时，还可以充分利用“行列式不等于零的矩阵可逆”的性质，这样的思路是常见的。
+
+    === "解答"
+
+        (a)证明：
+
+
