--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -299,14 +299,12 @@
 
         它要求集合中的元素是 $n*n$ 可逆矩阵，而这道题目中的元素是形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 2*2 矩阵。
 
-        回想一下线性代数的知识：我们可以用“行列式不等于零的矩阵可逆”的方法，计算行列式：$ \begin{vmatrix} a & b \\ 0 & 1 \\ \end{vmatrix}=a-0=a$，又因为题目中说 $a\not=0$，所以它是一个 2*2 可逆矩阵的集合，根据前面学的结论，它是群，但不是阿贝尔群。
+        回想一下线性代数的知识：我们可以用“行列式不等于零的矩阵可逆”的方法，计算行列式：$\begin{vmatrix} a & b \\ 0 & 1 \\ \end{vmatrix}=a-0=a$，又因为题目中说 $a\not=0$，所以它是一个 2*2 可逆矩阵的集合，根据前面学的结论，它是群，但不是阿贝尔群。
 
         得到了结论，我们如何证明呢？
 
-        事实上，在证明 $GL(n,\Bbb R)$ 的封闭、可逆等性质时，还可以充分利用“行列式不等于零的矩阵可逆”的性质，这样的思路是常见的。
+        事实上，在证明 $GL(n,\Bbb R)$ 的封闭、可逆等性质时，还可以充分利用**“行列式不等于零的矩阵可逆”**的性质，这样的思路是常见的。
 
     === "解答"
 
         (a)证明：
-
-
