--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -161,7 +161,7 @@
 
 1. $(\Bbb Z, + )$：是阿贝尔群。$\Bbb Z$ 表示整数集合 $\Bbb Z=\{…,-2,-1,0,1,2,…\}$，$+$ 表示定义在其上的加法运算。
 2. $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合（例：$\Bbb Z_{4}=\{0,1,2,3\}$），$+$ 表示 **$mod\ n$ 加法运算**，即：$a+b$ 表示 $(a+b) mod\ n$，注意这里是在 $\Bbb Z$ 上的 $+$ 运算。
-3. $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} | x 与 n 互素\}$（例：$n=3,\Bbb Z^{*}_{3}=\{1,2\}$；$n=4,\Bbb Z^{*}_{4}=\{1,3\}$），$·$ 表示 $mod\ n$ 乘法运算，即：$a·b=(ab) mod\ n$。
+3. $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} \mid x 与 n 互素\}$（例：$n=3,\Bbb Z^{*}_{3}=\{1,2\}$；$n=4,\Bbb Z^{*}_{4}=\{1,3\}$），$·$ 表示 $mod\ n$ 乘法运算，即：$a·b=(ab) mod\ n$。
 4. $Mat_{n}(\Bbb R)$ 关于矩阵加法运算：是阿贝尔群。$Mat_{n}(\Bbb R)$ 表示 $\Bbb R$ 上的所有 $n*n$ 矩阵的集合；单位元是全 0 矩阵 $0_{n*n}$。
 5. $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n*n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n*n}$；它是一个一般线性群。
 6. $S_{n}$ 关于映射合成运算：是群。设 $X$ 是**大小为 $n$** 的有限集合，记 $S_{n}=\{集合 X 上的所有置换\}$。其中：$S_{1}$，$S_{2}$ 是阿贝尔群，$S_{3}$ 不是阿贝尔群，当 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
@@ -308,3 +308,13 @@
     === "解答"
 
         (a)证明：
+
+对于 $\forall p,q,r\in \mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},q=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix},r=\begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix}$，其中 $p_{1},q_{1},r_{1}\not=0$.
+
+① $p\cdot q=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}$
+
+$\because p_{1}q_{1}\not=0,\quad \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\in \mathscr A$
+
+$\therefore$ 满足封闭性。
+
+② $(p\cdot q)\cdot r = \left(\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\right)\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1}r_{1} & p_{1}q_{1}r_{2}+p_{1}q_{2}+p_{2} \\ 0 & 1 \end{bmatrix}$
