--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -241,6 +241,8 @@
 
     证毕。
 
+<div class="exercise2" markdown>
+
 ???+ note "练习 2."
 
     === "题目"
@@ -285,6 +287,10 @@
 
         证毕。
 
+</div>
+
+<div class="exercise3" markdown>
+
 ???+ note "练习 3."
 
     === "题目"
@@ -307,14 +313,66 @@
 
     === "解答"
 
-        (a)证明：
+        （a）证明：
 
-对于 $\forall p,q,r\in \mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},q=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix},r=\begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix}$，其中 $p_{1},q_{1},r_{1}\not=0$.
+        对于 $\forall p,q,r\in \mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},q=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix},r=\begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix}$，其中 $p_{1},q_{1},r_{1}\not=0$.
 
-① $p\cdot q=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}$
+        ① $p\cdot q=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}$
 
-$\because p_{1}q_{1}\not=0,\quad \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\in \mathscr A$
+        $\because p_{1}q_{1}\not=0,\quad \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\in \mathscr A$
 
-$\therefore$ 满足封闭性。
+        $\therefore$ 满足封闭性。
 
-② $(p\cdot q)\cdot r = \left(\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\right)\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1}r_{1} & p_{1}q_{1}r_{2}+p_{1}q_{2}+p_{2} \\ 0 & 1 \end{bmatrix}$
+        ② $(p\cdot q)\cdot r = \left(\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\right)\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix} = \begin{bmatrix} p_{1}q_{1}r_{1} & p_{1}q_{1}r_{2}+p_{1}q_{2}+p_{2} \\ 0 & 1 \end{bmatrix}$
+
+        $p\cdot (q\cdot r) = \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \left(\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} r_{1} & r_{2} \\ 0 & 1 \\ \end{bmatrix}\right) = \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1}r_{1} & q_{1}r_{2}+q_{2} \\ 0 & 1 \end{bmatrix}=\begin{bmatrix} p_{1}q_{1}r_{1} & p_{1}q_{1}r_{2}+p_{1}q_{2}+p_{2} \\ 0 & 1 \end{bmatrix}$
+
+        $\because (p\cdot q)\cdot r = p\cdot (q\cdot r)$
+
+        $\therefore$ 满足结合律。
+
+        ③ $\exists e\in \mathscr A,\quad e=\begin{bmatrix} 1 & 0 \\ 0 & 1 \end{bmatrix},$ 使得 $\forall p\in\mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}$
+
+        $e\cdot p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},\quad p\cdot e=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}$
+
+        $e\cdot p=p\cdot e=p$
+
+        $e$ 为 $\mathscr A$ 的单位元。
+
+        $\therefore$ 满足存在单位元。
+
+        ④ 对于 $\forall p\in\mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}$
+
+        $\exists p'\in\mathscr A,\quad p'=\begin{bmatrix} \frac{1}{p_{1}} & -\frac{p_{2}}{p_{1}} \\ 0 & 1 \end{bmatrix}$，满足：
+
+        $p\cdot p'=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} \frac{1}{p_{1}} & -\frac{p_{2}}{p_{1}} \\ 0 & 1 \end{bmatrix}=\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ \end{bmatrix}=e$
+
+        $p'\cdot p=\begin{bmatrix} \frac{1}{p_{1}} & -\frac{p_{2}}{p_{1}} \\ 0 & 1 \end{bmatrix}\cdot \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ \end{bmatrix}=e$
+
+        $p\cdot p'=p'\cdot p=e$，$p'$ 为 $p$ 的逆元。
+
+        $\therefore$ 满足可逆性。
+
+        综上，$\mathscr A$ 是群。
+
+        （b）$\mathscr A$ 不是阿贝尔群。
+
+        证明：
+
+        对于 $\forall p,q\in\mathscr A$，设 $p=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix},q=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}$
+
+        $p\cdot q=\begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}$
+
+        $q\cdot p=\begin{bmatrix} q_{1} & q_{2} \\ 0 & 1 \\ \end{bmatrix}\cdot \begin{bmatrix} p_{1} & p_{2} \\ 0 & 1 \\ \end{bmatrix}=\begin{bmatrix} p_{1}q_{1} & p_{2}q_{1}+q_{2} \\ 0 & 1 \\ \end{bmatrix}$
+
+        $\begin{bmatrix} p_{1}q_{1} & p_{1}q_{2}+p_{2} \\ 0 & 1 \\ \end{bmatrix}\not=\begin{bmatrix} p_{1}q_{1} & p_{2}q_{1}+q_{2} \\ 0 & 1 \\ \end{bmatrix}$，（$p_{1}q_{2}+p_{2}\not=p_{2}q_{1}+q_{2}$ 时）
+
+        $\therefore p\cdot q\not=q\cdot p$，（$p_{1}q_{2}+p_{2}\not=p_{2}q_{1}+q_{2}$ 时）
+
+        $\therefore$ 不满足交换律。
+
+        $\mathscr A$ 不是阿贝尔群。
+
+        证毕。
+
+</div>
