--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -119,6 +119,8 @@
 
         这种数学语言在验证群的性质中是**常见**的。
 
+        此外，在验证“存在单位元”性质时，我们要找到这个单位元；在验证“可逆性”性质时，我们要对一个一般的集合元素找到它的逆元，从而说明集合中的每一个元素都有逆元。
+
     === "解答"
 
         A 关于整数的加法运算不是群；B 关于整数的加法运算是群。
@@ -221,6 +223,29 @@
 
         介绍同余性质时再证明。
 
+    === $Mat_{n}(\Bbb R)$ 关于矩阵加法运算
+
+        1. 封闭性：设 $A,B\in Mat_{n}(\Bbb R)$，则 $A,B$ 是 $n\times n$ 矩阵，于是 $A+B$ 也是 $n\times n$ 矩阵，从而 $A+B\in Mat_{n}(\Bbb R)$.
+        2. 结合律：因为矩阵的加法满足结合律，所以 $Mat_{n}(\Bbb R)$ 中的加法运算也满足结合律。
+        3. 全 0 矩阵是单位元：全 0 矩阵 $0_{n\times n}\in Mat_{n}(\Bbb R)$，且对任意的矩阵 $A\in Mat_{n}(\Bbb R)$，有：$0_{n\times n}+A=A+0_{n\times n}=A$，所以全 0 矩阵 $0_{n\times n}$ 是 $Mat_{n}(\Bbb R)$ 的单位元。
+        4. 可逆性：对于 $\forall A\in Mat_{n}(\Bbb R)$，$A$ 是 $n\times n$ 矩阵，于是 $-A$ 存在且是 $n\times n$ 矩阵，从而 $-A\in Mat_{n}(\Bbb R)$，且：$A+(-A)=(-A)+A=0_{n\times n}$，所以 $Mat_{n}(\Bbb R)$ 中的每个元素在 $Mat_{n}(\Bbb R)$ 中都可逆。
+        5. 交换律：因为矩阵的加法满足交换律，所以 $Mat_{n}(\Bbb R)$ 中的加法运算也满足交换律。
+
+    === "$GL(n,\Bbb R)$ 关于矩阵乘法运算"
+
+        2. 封闭性：设 $A,B\in GL(n,\Bbb R)$，则 $A,B$ 可逆，于是 $AB$ 也可逆，从而 $AB\in GL(n,\Bbb R)$.
+        3. 结合律：因为矩阵的乘法满足结合律，所以 $GL(n,\Bbb R)$ 中的乘法运算也满足结合律。
+        4. 单位矩阵是单位元：单位矩阵 $E\in GL(n,\Bbb R)$，且对任意的矩阵 $A\in GL(n,\Bbb R)$，有：$EA=AE=A$，所以单位矩阵 $E$ 是 $GL(n,\Bbb R)$ 的单位元。
+        5. 可逆性：对于 $\forall A\in GL(n,\Bbb R)$，$A$ 可逆，于是 $A^{-1}$ 存在且可逆，从而 $A^{-1}\in GL(n,\Bbb R)$，且：$A\cdot A^{-1}=A^{-1}\cdot A=E$，所以 $GL(n,\Bbb R)$ 中的每个元素在 $GL(n,\Bbb R)$ 中都可逆。
+
+        注：相似题目，见“练习3”.
+
+    === "$S_{n}$ 关于映射合成运算"
+
+        $S_{1},S_{2}$是阿贝尔群，由于它们的形式简单，因此是容易证得的。
+
+        当 $n\geq 3$ 时，证明过程见“练习2”。
+
 ??? question "如何证明一个代数系统不是阿贝尔群？（以 $S_{3}$ 为例）"
 
     我们一般通过对某个性质**举一个反例**的方法，证明一个代数系统不是阿贝尔群。
@@ -243,7 +268,7 @@
 
 ???+ note "练习 2."
 
-    === "题目2"
+    === "题目"
 
         证明 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
 
