--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -223,7 +223,7 @@
 
         介绍同余性质时再证明。
 
-    === $Mat_{n}(\Bbb R)$ 关于矩阵加法运算
+    === "$Mat_{n}(\Bbb R)$ 关于矩阵加法运算"
 
         1. 封闭性：设 $A,B\in Mat_{n}(\Bbb R)$，则 $A,B$ 是 $n\times n$ 矩阵，于是 $A+B$ 也是 $n\times n$ 矩阵，从而 $A+B\in Mat_{n}(\Bbb R)$.
         2. 结合律：因为矩阵的加法满足结合律，所以 $Mat_{n}(\Bbb R)$ 中的加法运算也满足结合律。
