信息安全数学基础更新至第三节

--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -56,7 +56,7 @@
 
 在学习这一节的过程中，我们将会**定义许多运算**，这些运算通常用运算符（ +、 · ）等表示。
 
-**注意！不要把这些下意识地想象成加法和乘法，而要注意对运算符的具体定义。**
+**注意！不要把这些下意识地想象成整数加法和乘法，而要注意对运算符的具体定义。**
 
 我们还会定义执行运算的**元素集合**，在整数加法中，元素集合是所有整数；但在我们的定义中，元素集合可能是所有奇数、所有偶数、R 上的所有 n\*n 矩阵、R 上的所有 n\*n 可逆矩阵……可能的定义有很多很多，不要直接想象成全体整数。
 
@@ -164,8 +164,8 @@
 1. $(\Bbb Z, + )$：是阿贝尔群。$\Bbb Z$ 表示整数集合 $\Bbb Z=\{…,-2,-1,0,1,2,…\}$，$+$ 表示定义在其上的加法运算。
 2. $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合（例：$\Bbb Z_{4}=\{0,1,2,3\}$），$+$ 表示 **$mod\ n$ 加法运算**，即：$a+b$ 表示 $(a+b) mod\ n$，注意这里是在 $\Bbb Z$ 上的 $+$ 运算。
 3. $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} \mid x 与 n 互素\}$（例：$n=3,\Bbb Z^{*}_{3}=\{1,2\}$；$n=4,\Bbb Z^{*}_{4}=\{1,3\}$），$·$ 表示 $mod\ n$ 乘法运算，即：$a·b=(ab) mod\ n$。
-4. $Mat_{n}(\Bbb R)$ 关于矩阵加法运算：是阿贝尔群。$Mat_{n}(\Bbb R)$ 表示 $\Bbb R$ 上的所有 $n*n$ 矩阵的集合；单位元是全 0 矩阵 $0_{n*n}$。
-5. $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n*n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n*n}$；它是一个一般线性群。
+4. $Mat_{n}(\Bbb R)$ 关于矩阵加法运算：是阿贝尔群。$Mat_{n}(\Bbb R)$ 表示 $\Bbb R$ 上的所有 $n\times n$ 矩阵的集合；单位元是全 0 矩阵 $0_{n\times n}$。
+5. $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n\times n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n\times n}$；它是一个一般线性群。
 6. $S_{n}$ 关于映射合成运算：是群。设 $X$ 是**大小为 $n$** 的有限集合，记 $S_{n}=\{集合 X 上的所有置换\}$。其中：$S_{1}$，$S_{2}$ 是阿贝尔群，$S_{3}$ 不是阿贝尔群，当 $n>3$ 时，$S_{n}$ 不是阿贝尔群。
 
 ??? question "如何理解映射合成运算？"
@@ -314,17 +314,17 @@
 
     === "题目"
 
-        假设 $\mathscr A$ 是所有形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 2*2 矩阵构成的集合，其中 $a\not=0$.对于实数上的矩阵乘法运算，(a)证明 $\mathscr A$ 是群。(b)$\mathscr A$ 是否是阿贝尔群？请证明你的结论。
+        假设 $\mathscr A$ 是所有形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 $2\times 2$ 矩阵构成的集合，其中 $a\not=0$.对于实数上的矩阵乘法运算，(a)证明 $\mathscr A$ 是群。(b)$\mathscr A$ 是否是阿贝尔群？请证明你的结论。
 
     === "思路"
 
         看到这个形式，可以想到我们前面学到的：
 
-        $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n*n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n*n}$；它是一个一般线性群。
+        $GL(n,\Bbb R)$ 关于矩阵乘法运算：是群，但不是阿贝尔群。$GL(n,\Bbb R)$ 表示 $\Bbb R$ 上所有 $n\times n$ 可逆矩阵的集合；单位元是单位矩阵 $I_{n\times n}$；它是一个一般线性群。
 
-        它要求集合中的元素是 $n*n$ 可逆矩阵，而这道题目中的元素是形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 2*2 矩阵。
+        它要求集合中的元素是 $n\times n$ 可逆矩阵，而这道题目中的元素是形如 $A=\begin{bmatrix} a & b \\ 0 & 1 \\ \end{bmatrix}$ 的 $2\times 2$ 矩阵。
 
-        回想一下线性代数的知识：我们可以用“行列式不等于零的矩阵可逆”的方法，计算行列式：$\begin{vmatrix} a & b \\ 0 & 1 \\ \end{vmatrix}=a-0=a$，又因为题目中说 $a\not=0$，所以它是一个 2*2 可逆矩阵的集合，根据前面学的结论，它是群，但不是阿贝尔群。
+        回想一下线性代数的知识：我们可以用“行列式不等于零的矩阵可逆”的方法，计算行列式：$\begin{vmatrix} a & b \\ 0 & 1 \\ \end{vmatrix}=a-0=a$，又因为题目中说 $a\not=0$，所以它是一个 $2\times 2$ 可逆矩阵的集合，根据前面学的结论，它是群，但不是阿贝尔群。
 
         得到了结论，我们如何证明呢？
 
@@ -393,3 +393,65 @@
         $\mathscr A$ 不是阿贝尔群。
 
         证毕。
+
+### 3. 环和域
+
+#### 3.1 环和域的概念
+
+下面我们来介绍“环”，它的性质比“群”要多许多，这类代数系统同时定义了 $+$、$\cdot$ 两个二元运算。
+
+**环（Ring）$(\Bbb R,+,\cdot)$：**$\Bbb R$ 是元素集合，$+,\cdot$ 是定义在 $\Bbb R$ 上的二元运算，且满足**如下三类性质**则称为环：
+
+1. $(\Bbb R,+)$ 是阿贝尔群；
+2. 乘法 $\cdot$ 满足：封闭性、结合律、存在单位元；
+3. $+,\cdot$ 满足：分配律。
+
+在这里，我们将 $(\Bbb R,+)$ 的单位元记为 0，称为“加法单位元”；将 $(\Bbb R,\cdot)$ 的单位元记为 1，称为“乘法单位元”。
+
+**分配律的含义**是：对 $\forall a,b,c\in\Bbb R$，有 $(a+b)c=(ac)+(bc),\quad c(a+b)=(ca)+(cb)$.
+
+**交换环：** 在 $(\Bbb R,+,\cdot)$ 是一个环的基础上，如果**还满足**下面的一类性质，则称为交换环。
+
+1. 乘法 $\cdot$ 满足：交换律。
+
+**域（Field）：** 在 $(\Bbb R,+,\cdot)$ 是一个交换环的基础上，如果**还满足**下面的一类性质，则称为域。
+
+1. $0\not=1$，所有非 0 元素都有乘法逆元。
+
+其中，元素个数无限的称为**无限域**，个数有限的域称为**有限域**。
+
+**域还有另一种定义方法**，它也是一个定理。
+
+$(\Bbb F,+,\cdot)$ 是域，**等价于**下面的三个条件同时满足：
+
+1. $(\Bbb F,+,0)$ 是阿贝尔群；
+2. $(\Bbb F^{*},\cdot,1)$ 是阿贝尔群；（其中 $F^{*}=F\backslash\{0\}$）
+3. $+,\cdot$ 满足分配律。
+
+#### 3.2 环和域的例子
+
+1. $(Mat_{n}(\Bbb R),+,\cdot)$ 是环，其中 $+,\cdot$ 分别表示 $\Bbb R$ 上的矩阵加法和乘法。
+   在 $n>1$ 时，它不是交换环。
+2. $(\Bbb Z, +,\cdot)$ 是交换环，但不是域。
+   原因：整数 $\Bbb Z$ 是一个交换环，但是由于不符合“所有非 0 元素都有乘法逆元”（例如：$2^{-1}=1/2,\quad 1/2\notin\Bbb Z)$，所以它不是一个域。
+3. $(\Bbb Z_{m}, +,\cdot)$ 是交换环，当且仅当 $m$ 为素数时是域。
+   在同余式部分会给出证明
+4. 实数域 $(\Bbb R,+,\cdot)$、有理数域 $(\Bbb Q,+,\cdot)$、复数域 $(\Bbb C,+,\cdot)$ 都是域。
+
+### 4. 抽象代数和数论
+
+这一小节简要了解就可以了。
+
+1. 由数论问题发展出抽象代数。
+
+   Galois 证明了方程次数 $\geq 5$ 时不存在根式求解公式。
+
+2. 数论问题为抽象代数提供具体的例子。
+
+   例如：
+
+   $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合，$+$ 表示 $mod\ n$ 加法运算。
+
+   $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} \mid x 与 n 互素\}$，$·$ 表示 $mod\ n$ 乘法运算。当 $n$ 是素数时，它是循环群。
+
+   $(\Bbb Z_{p}, +,\cdot)$ 是域。其中 $p$ 为素数。
