--- a/docs/信息安全数学基础.md
+++ b/docs/信息安全数学基础.md
@@ -149,7 +149,7 @@
 
 #### 2.2 阿贝尔群的概念
 
-若**群 G**满足交换性则称为**阿贝尔群(Abelian 群)**，或者**交换群**。
+若**群 G** 满足交换性则称为**阿贝尔群（Abelian 群）**，或者**交换群**。
 
 首先，这个代数系统需要是一个群（需要满足群的四个性质），此外，如果它还满足**交换律**，那么它称为阿贝尔群。
 
@@ -435,7 +435,7 @@ $(\Bbb F,+,\cdot)$ 是域，**等价于**下面的三个条件同时满足：
 2. $(\Bbb Z, +,\cdot)$ 是交换环，但不是域。
    原因：整数 $\Bbb Z$ 是一个交换环，但是由于不符合“所有非 0 元素都有乘法逆元”（例如：$2^{-1}=1/2,\quad 1/2\notin\Bbb Z)$，所以它不是一个域。
 3. $(\Bbb Z_{m}, +,\cdot)$ 是交换环，当且仅当 $m$ 为素数时是域。
-   在同余式部分会给出证明
+   在同余式部分会给出证明。
 4. 实数域 $(\Bbb R,+,\cdot)$、有理数域 $(\Bbb Q,+,\cdot)$、复数域 $(\Bbb C,+,\cdot)$ 都是域。
 
 ### 4. 抽象代数和数论
@@ -443,15 +443,9 @@ $(\Bbb F,+,\cdot)$ 是域，**等价于**下面的三个条件同时满足：
 这一小节简要了解就可以了。
 
 1. 由数论问题发展出抽象代数。
-
    Galois 证明了方程次数 $\geq 5$ 时不存在根式求解公式。
-
 2. 数论问题为抽象代数提供具体的例子。
-
    例如：
-
    $(\Bbb Z_{n}, + )$：是阿贝尔群。$\Bbb Z_{n}$ 表示比 $n$ 小的非负整数集合，$+$ 表示 $mod\ n$ 加法运算。
-
    $(\Bbb Z^{*}_{n}, · )$：是阿贝尔群。$\Bbb Z^{*}_{n}=\{x\in \Bbb Z_{n} \mid x 与 n 互素\}$，$·$ 表示 $mod\ n$ 乘法运算。当 $n$ 是素数时，它是循环群。
-
    $(\Bbb Z_{p}, +,\cdot)$ 是域。其中 $p$ 为素数。
